# ops-concept-simulator

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: scenarios.json
docs/: README.md  conops_notes.md  project_plan.md
reports/: conops-dashboard.html  conops-summary.md  scenario-catalog.csv  subsystem-utilization.csv
src/ops_concept_simulator/: __init__.py  cli.py  data.py  export.py  simulate.py
tests/: test_simulate.py
