[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-concept-simulator"
version = "0.1.0"
description = "Scenario-driven concept-of-operations simulator for a systems engineering portfolio."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Akif" }
]
keywords = [
  "systems-engineering",
  "conops",
  "operations",
  "simulation"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
ops-concept-simulator = "ops_concept_simulator.cli:run"

[tool.setuptools.packages.find]
where = ["src"]
